<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/rl_holder" android:padding="8dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/rl_title" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="@android:color/secondary_text_light" android:id="@+id/textView_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/select_country" android:layout_toLeftOf="@+id/img_dismiss" android:layout_toStartOf="@+id/img_dismiss"/>
        <ImageView android:id="@+id/img_dismiss" android:padding="4dp" android:clickable="true" android:layout_width="36dp" android:layout_height="36dp" android:src="@drawable/ic_clear_black_24dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/dismiss_button_content_description" android:alpha="0.7" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_query_holder" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/rl_title">
        <EditText android:textColor="@android:color/primary_text_light_nodisable" android:id="@+id/editText_search" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/search_hint" android:singleLine="true" android:layout_toLeftOf="@+id/img_clear_query" android:inputType="textNoSuggestions" android:imeOptions="actionSearch" android:layout_toStartOf="@+id/img_clear_query"/>
        <ImageView android:id="@+id/img_clear_query" android:padding="10dp" android:clickable="true" android:layout_width="36dp" android:layout_height="36dp" android:src="@drawable/ic_backspace_black_24dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/clear_search_button_content_description" android:alpha="0.7" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler_countryDialog" android:layout_width="match_parent" android:layout_height="match_parent" android:dividerHeight="2dp" android:layout_below="@+id/rl_query_holder"/>
    <com.futuremind.recyclerviewfastscroll.FastScroller android:orientation="vertical" android:id="@+id/fastscroll" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_alignTop="@+id/recycler_countryDialog" android:layout_alignRight="@+id/recycler_countryDialog" android:layout_alignBottom="@+id/recycler_countryDialog" android:layout_alignEnd="@+id/recycler_countryDialog"/>
    <TextView android:textColor="@android:color/primary_text_light" android:id="@+id/textView_noresult" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/no_result_found" android:layout_below="@+id/rl_query_holder" android:layout_centerHorizontal="true"/>
</RelativeLayout>
